robots.txt disallow

--- a/contacts.html
+++ b/contacts.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt</title>
-    <link rel="stylesheet" href="./css/main.min.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Leonid Domahalskyy - Kontakt</title>
+    <link rel="stylesheet" href="./css/main.min.css" />
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868">
-    <meta name="msapplication-TileColor" content="#000000">
-    <meta name="theme-color" content="#000000">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="#000000" />
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNR6GXG3S6"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-FNR6GXG3S6"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -35,11 +38,19 @@
       <div class="container">
         <div class="nav-row">
           <a href="./index.html">
-            <img class="logo" src="./img/icons/logo.svg" alt="logo">
+            <img class="logo" src="./img/icons/logo.svg" alt="logo" />
           </a>
           <button class="dark-mode-btn">
-            <img src="./img/icons/sun.svg" alt="Light mode" class="dark-mode-btn__icon">
-            <img src="./img/icons/moon.svg" alt="Dark mode" class="dark-mode-btn__icon">
+            <img
+              src="./img/icons/sun.svg"
+              alt="Light mode"
+              class="dark-mode-btn__icon"
+            />
+            <img
+              src="./img/icons/moon.svg"
+              alt="Dark mode"
+              class="dark-mode-btn__icon"
+            />
           </button>
 
           <ul class="nav-list">
@@ -52,12 +63,15 @@
             </li>
 
             <li class="nav-list__item">
-              <a href="./contacts.html" class="nav-list__link--active">Kontakt</a>
+              <a href="./contacts.html" class="nav-list__link--active"
+                >Kontakt</a
+              >
             </li>
           </ul>
 
           <div class="hamburger">
-            <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+            <span class="bar"></span><span class="bar"></span
+            ><span class="bar"></span>
           </div>
         </div>
       </div>
@@ -72,9 +86,27 @@
           </h1>
 
           <form class="form" action="submit_form.php" method="POST">
-            <input type="text" placeholder="Dein Name" id="name" name="name" required>
-            <input type="email" placeholder="Deine Email" id="email" name="email" required>
-            <textarea id="message" placeholder="Schreibe mir eine Nachricht" name="message" rows="4" required></textarea>
+            <input
+              type="text"
+              placeholder="Dein Name"
+              id="name"
+              name="name"
+              required
+            />
+            <input
+              type="email"
+              placeholder="Deine Email"
+              id="email"
+              name="email"
+              required
+            />
+            <textarea
+              id="message"
+              placeholder="Schreibe mir eine Nachricht"
+              name="message"
+              rows="4"
+              required
+            ></textarea>
             <button class="button" type="submit">Senden</button>
           </form>
         </div>
@@ -87,27 +119,33 @@
         <ul class="social">
           <li class="social__item">
             <a href="https://t.me/ledo9913" target="_blank">
-              <img src="./img/icons/telegram.svg" alt="telegram">
+              <img src="./img/icons/telegram.svg" alt="telegram" />
             </a>
           </li>
           <li class="social__item">
-            <a href="https://discordapp.com/users/1016065690253406298" target="_blank">
-              <img src="./img/icons/discord.svg" alt="discord">
+            <a
+              href="https://discordapp.com/users/1016065690253406298"
+              target="_blank"
+            >
+              <img src="./img/icons/discord.svg" alt="discord" />
             </a>
           </li>
           <li class="social__item">
             <a href="https://dribbble.com/ledo93" target="_blank">
-              <img src="./img/icons/dribbble.svg" alt="dribbble">
+              <img src="./img/icons/dribbble.svg" alt="dribbble" />
             </a>
           </li>
           <li class="social__item">
             <a href="https://github.com/ledo9315" target="_blank">
-              <img src="./img/icons/gitHub.svg" alt="gitHub">
+              <img src="./img/icons/gitHub.svg" alt="gitHub" />
             </a>
           </li>
           <li class="social__item">
-            <a href="https://www.linkedin.com/in/leonid-domahalskyy-0a6b95206/?originalSubdomain=de" target="_blank">
-              <img src="./img/icons/linkedIn.svg" alt="linkedIn">
+            <a
+              href="https://www.linkedin.com/in/leonid-domahalskyy-0a6b95206/?originalSubdomain=de"
+              target="_blank"
+            >
+              <img src="./img/icons/linkedIn.svg" alt="linkedIn" />
             </a>
           </li>
         </ul>
@@ -119,4 +157,3 @@
     <script src="./js/main.js"></script>
   </body>
 </html>
-
