--- a/project-page1.html
+++ b/project-page1.html
@@ -48,11 +48,7 @@
       <div class="container">
         <div class="nav-row">
           <a href="./index.html">
-            <img
-              class="logo"
-              src="./img/icons/logo.svg"
-              alt="logo"
-            />
+            <img class="logo" src="./img/icons/logo.svg" alt="logo" />
           </a>
           <button class="dark-mode-btn">
             <img
@@ -117,7 +113,7 @@
           </div>
 
           <h2 class="project-details__desc">
-            <p>umgesetzt mit<br /><em>JavaScript, Sass</em></p>
+            umgesetzt mit<br /><em>JavaScript, Sass</em>
           </h2>
           <div class="project-details__info-banner">
             <h2 class="project-details__info-banner__headline">
