word-spacing header-title

--- a/skills.html
+++ b/skills.html
@@ -99,10 +99,10 @@
             <p>
               Ich bin besonders begeistert von der Entwicklung von
               Webanwendungen, insbesondere dem
-              <span>Web-/Frontend-Design und UI/UX</span>. F&uuml;r mich ist es
-              wichtig, dass L&ouml;sungen nicht nur funktional sind, sondern
-              auch benutzerfreundlich. Innovation und Benutzerfreundlichkeit
-              sind meine st&auml;ndige Motivation.
+              <span class="uiux">Web-/Frontend-Design und UI/UX</span>. F&uuml;r
+              mich ist es wichtig, dass L&ouml;sungen nicht nur funktional sind,
+              sondern auch benutzerfreundlich. Innovation und
+              Benutzerfreundlichkeit sind meine st&auml;ndige Motivation.
             </p>
             <p>
               Stets halte ich mich &uuml;ber die neuesten Technologien auf dem
