--- a/contacts.html
+++ b/contacts.html
@@ -82,7 +82,7 @@
       <div class="container">
         <div class="contact-wrapper">
           <h1 class="contact-text">
-            Lass uns <span>gemeinsam</span> an Projekten arbeiten.
+            Lass uns <span>gemeinsam</span> an <em>Projekten</em> arbeiten.
           </h1>
 
           <form class="form" action="submit_form.php" method="POST">
