--- a/project-page1.html
+++ b/project-page1.html
@@ -112,9 +112,9 @@
             </a>
           </div>
 
-          <h2 class="project-details__desc">
+          <!--           <h2 class="project-details__desc">
             umgesetzt mit<br /><em>JavaScript, Sass</em>
-          </h2>
+          </h2> -->
           <div class="project-details__info-banner">
             <h2 class="project-details__info-banner__headline">
               JavaScript Sass KURS
