--- a/project-page3.html
+++ b/project-page3.html
@@ -48,11 +48,7 @@
       <div class="container">
         <div class="nav-row">
           <a href="./index.html">
-            <img
-              class="logo"
-              src="./img/icons/logo.svg"
-              alt="logo"
-            />
+            <img class="logo" src="./img/icons/logo.svg" alt="logo" />
           </a>
           <button class="dark-mode-btn">
             <img
@@ -110,9 +106,9 @@
             </a>
           </div>
 
-          <div class="project-details__desc">
+          <!--     <div class="project-details__desc">
             <h2>umgesetzt mit<br /><em>Figma</em></h2>
-          </div>
+          </div> -->
           <div class="project-details__info-banner">
             <h2 class="project-details__info-banner__headline">
               Interaktiver Click-Dummy
