--- a/project-page1.html
+++ b/project-page1.html
@@ -10,12 +10,30 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" href="./favico/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./favico/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favico/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favico/favicon-16x16.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868" />
+    <link
+      rel="mask-icon"
+      href="./favico/safari-pinned-tab.svg"
+      color="#686868"
+    />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#000000" />
 
@@ -69,7 +87,7 @@
             </li>
 
             <li class="nav-list__item">
-              <a href="./skills.html" class="nav-list__link">Über mich</a>
+              <a href="./about_me.html" class="nav-list__link">Über mich</a>
             </li>
 
             <li class="nav-list__item">
@@ -112,11 +130,8 @@
             </a>
           </div>
 
-          <h2 class="project-details__desc">
-            umgesetzt mit<br /><em>JavaScript, Sass</em>
-          </h2>
           <div class="project-details__info-banner">
-            <h2 class="project-details__info-banner__headline">
+            <h2 class="project-details__info-banner__headline title-2">
               JavaScript Sass KURS
             </h2>
             <p class="project-details__info-banner__text">
@@ -128,95 +143,76 @@
             </p>
           </div>
           <div class="project-details__main-text">
-            <h2>Was ich umsetzen konnte</h2>
-
-            <h3>Responsive Design</h3>
-            <p>
-              Ich habe gelernt, wie man Webseiten so gestaltet, dass sie nicht
-              nur auf Desktop-Computern gut aussehen, sondern auch auf
-              Mobilgeräten optimal dargestellt werden. Dabei habe ich sowohl den
-              Ansatz des "Desktop-first" als auch "Mobile-first" Designs
-              verstanden und angewendet.
-            </p>
-
-            <h3>Gradients</h3>
-            <p>
-              Ich kann jetzt schicke Farbverläufe sowohl als Hintergrundbilder
-              als auch für Schriftfarben erstellen, um meinen Designs mehr
-              visuelles Interesse zu verleihen.
-            </p>
-
-            <h3>Animationen</h3>
-            <p>
-              Mithilfe von CSS-Animationen, Transitions und @keyframes habe ich
-              komplexe Animationen erstellt, die Hover-Effekte und flüssige
-              Bewegungen beinhalten. Diese Animationen fügen meinen Webseiten
-              eine dynamische und ansprechende Note hinzu.
-            </p>
-
-            <h3>3D-Effekte</h3>
-            <p>
-              Ich habe gelernt, wie man Elemente im 3D-Raum bewegt und so noch
-              beeindruckendere Animationen und Effekte erzeugt.
-            </p>
-
-            <h3>Flexbox und CSS-Grid</h3>
-            <p>
-              Mit diesen fortschrittlichen Layout-Techniken kann ich Elemente
-              nebeneinander platzieren oder ein automatisches Grid für ein
-              flexibles und ansprechendes Design erstellen.
-            </p>
-
-            <h3>Positionierung von Elementen</h3>
-            <p>
-              Ich kann nun problemlos Elemente übereinander legen, um
-              beispielsweise Bilder über Texte zu legen und so interessante
-              visuelle Effekte zu erzielen.
-            </p>
-
-            <h3>SASS</h3>
-            <p>
-              Der Kurs hat mir beigebracht, wie ich meinen CSS-Code mit SASS
-              strukturiere und organisiere. Ich kann Variablen und Mixins
-              verwenden, um meinen Code besser wartbar und effizienter zu
-              gestalten.
-            </p>
-
-            <h3>Interaktive Features ohne JavaScript</h3>
-            <p>
-              Ich habe gelernt, wie man interaktive Elemente wie ausfahrbare
-              Seitenmenüs, aufklappbare Buttons und animierte Dialoge erstellt,
-              ganz ohne JavaScript. Das hat meine Fähigkeiten als Webentwickler
-              erweitert und mir gezeigt, wie man kreative Lösungen ohne
-              zusätzliche Skripts implementiert.
-            </p>
-
-            <h3>BEM-Components</h3>
-            <p>
-              Mit diesem Ansatz zur Benennung von CSS-Klassen kann ich meinen
-              Code besser organisieren und wiederverwendbaren CSS-Code
-              schreiben, was meine Produktivität steigert.
-            </p>
-
-            <h3>Praxisprojekt von A-Z</h3>
-            <p>
-              Im Rahmen des Kurses habe ich ein komplettes Praxisprojekt
-              entwickelt, das all diese Techniken in einem realen Kontext
-              anwendet. Das Projekt umfasste interaktive Elemente, ansprechende
-              Animationen und ein responsives Design, das auf verschiedenen
-              Geräten optimal aussieht.
-            </p>
-            <div class="fazit">
-              <h3>Fazit</h3>
+            <section>
+              <h3 class="title-3">Responsive Design</h3>
               <p>
-                Insgesamt habe ich durch diesen Kurs nicht nur mein Verständnis
-                für moderne CSS-Techniken erweitert, sondern auch gelernt, wie
-                ich diese Techniken effektiv in echten Webseitenprojekten
-                einsetzen kann. Mein Portfolio als Webentwickler wurde durch die
-                erworbenen Fähigkeiten und das umgesetzte Projekt erheblich
-                aufgewertet.
+                Ich habe gelernt, wie man Webseiten so gestaltet, dass sie nicht
+                nur auf Desktop-Computern gut aussehen, sondern auch auf
+                Mobilgeräten optimal dargestellt werden. Dabei habe ich sowohl
+                den Ansatz des "Desktop-first" als auch "Mobile-first" Designs
+                verstanden und angewendet.
               </p>
-            </div>
+            </section>
+
+            <section>
+              <h3 class="title-3">Gradients</h3>
+              <p>
+                Ich kann jetzt schicke Farbverläufe sowohl als Hintergrundbilder
+                als auch für Schriftfarben erstellen, um meinen Designs mehr
+                visuelles Interesse zu verleihen.
+              </p>
+            </section>
+            <section>
+              <h3 class="title-3">Animationen</h3>
+              <p>
+                Mithilfe von CSS-Animationen, Transitions und @keyframes habe
+                ich komplexe Animationen erstellt, die Hover-Effekte und
+                flüssige Bewegungen beinhalten. Diese Animationen fügen meinen
+                Webseiten eine dynamische und ansprechende Note hinzu.
+              </p>
+            </section>
+            <section>
+              <h3 class="title-3">3D-Effekte</h3>
+              <p>
+                Ich habe gelernt, wie man Elemente im 3D-Raum bewegt und so noch
+                beeindruckendere Animationen und Effekte erzeugt.
+              </p>
+            </section>
+            <section>
+              <h3 class="title-3">Flexbox und CSS-Grid</h3>
+              <p>
+                Mit diesen fortschrittlichen Layout-Techniken kann ich Elemente
+                nebeneinander platzieren oder ein automatisches Grid für ein
+                flexibles und ansprechendes Design erstellen.
+              </p>
+            </section>
+
+            <section>
+              <h3 class="title-3">SASS</h3>
+              <p>
+                Der Kurs hat mir beigebracht, wie ich meinen CSS-Code mit SASS
+                strukturiere und organisiere. Ich kann Variablen und Mixins
+                verwenden, um meinen Code besser wartbar und effizienter zu
+                gestalten.
+              </p>
+            </section>
+
+            <section>
+              <h3 class="title-3">BEM-Components</h3>
+              <p>
+                Mit diesem Ansatz zur Benennung von CSS-Klassen kann ich meinen
+                Code besser organisieren und wiederverwendbaren CSS-Code
+                schreiben, was meine Produktivität steigert.
+              </p>
+            </section>
+            <h3 class="title-3">Fazit</h3>
+            <p>
+              Insgesamt habe ich durch diesen Kurs nicht nur mein Verständnis
+              für moderne CSS-Techniken erweitert, sondern auch gelernt, wie ich
+              diese Techniken effektiv in echten Webseitenprojekten einsetzen
+              kann. Mein Portfolio als Webentwickler wurde durch die erworbenen
+              Fähigkeiten und das umgesetzte Projekt erheblich aufgewertet.
+            </p>
           </div>
         </div>
       </div>
