--- a/project-page2.html
+++ b/project-page2.html
@@ -10,12 +10,30 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" href="./favico/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./favico/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favico/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favico/favicon-16x16.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868" />
+    <link
+      rel="mask-icon"
+      href="./favico/safari-pinned-tab.svg"
+      color="#686868"
+    />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#000000" />
 
@@ -48,11 +66,7 @@
       <div class="container">
         <div class="nav-row">
           <a href="./index.html">
-            <img
-              class="logo"
-              src="./img/icons/logo.svg"
-              alt="logo"
-            />
+            <img class="logo" src="./img/icons/logo.svg" alt="logo" />
           </a>
           <button class="dark-mode-btn">
             <img
@@ -73,7 +87,7 @@
             </li>
 
             <li class="nav-list__item">
-              <a href="./skills.html" class="nav-list__link">Über mich</a>
+              <a href="./about_me.html" class="nav-list__link">Über mich</a>
             </li>
 
             <li class="nav-list__item">
@@ -116,67 +130,47 @@
               Webseite <i class="fa-solid fa-up-right-from-square"></i>
             </a>
           </div>
-
-          <div class="project-details__desc">
-            <h2>umgesetzt mit<br /><em>JavaScript, CSS, HTML</em></h2>
-          </div>
           <div class="project-details__info-banner">
             <h2 class="project-details__info-banner__headline">
               Angela's Dance Academy
             </h2>
             <p class="project-details__info-banner__text">
-              Im Rahmen dieses Projekts habe ich meine Fähigkeiten in HTML, CSS
-              und JavaScript genutzt, um eine dynamische und ansprechende
-              Landing-Page für Angela's Dance Academy zu entwickeln. Die
-              Webseite ist darauf ausgelegt, die Begeisterung und das Talent für
-              Tanz in einer einzigartigen Weise zu präsentieren.
+              Ich war verantwortlich für das Design und die Entwicklung der
+              neuen Website von "Angela's Dance Academy". Ich erstellte ein
+              ansprechendes und benutzerfreundliches Design, das die
+              Markenidentität der Tanzschule widerspiegelt. Außerdem habe ich
+              interaktive Elemente eingebaut, um die Nutzer zu unterhalten und
+              zu motivieren, sich mit der Website zu beschäftigen.
             </p>
           </div>
           <div class="project-details__main-text">
-            <h2>Was ich umsetzen konnte</h2>
-
-            <h3>Responsive Design</h3>
-            <p>
-              Die Landing-Page wurde mit einem responsiven Design gestaltet, um
-              sicherzustellen, dass sie auf verschiedenen Geräten optimal
-              angezeigt wird. Besucher können die Seite auf Desktops, Tablets
-              und Smartphones gleichermaßen genießen.
-            </p>
-
-            <h3>HTML</h3>
-            <p>
-              Die Struktur der Webseite wurde sorgfältig aufgebaut, um die
-              verschiedenen Tanzstile und Kurse von Angela's Dance Academy
-              optimal zu präsentieren. Von der Einführung der Akademie bis hin
-              zu den aufregenden Tanzkursen - jede Information wurde mit HTML in
-              das Layout integriert.
-            </p>
-
-            <h3>CSS</h3>
-            <p>
-              Die Gestaltung der Seite wurde durch CSS realisiert, um ein
-              ansprechendes visuelles Erlebnis zu schaffen. Von den fließenden
-              Animationen bis hin zu den beeindruckenden Farbverläufen - jedes
-              Designelement wurde mit CSS-Stilen sorgfältig umgesetzt.
-            </p>
-
-            <h3>JavaScript</h3>
-            <p>
-              Die Gestaltung der Seite wurde durch CSS realisiert, um ein
-              ansprechendes visuelles Erlebnis zu schaffen. Von den fließenden
-              Animationen bis hin zu den beeindruckenden Farbverläufen - jedes
-              Designelement wurde mit CSS-Stilen sorgfältig umgesetzt.
-            </p>
-
-            <div class="fazit">
-              <h3>Fazit</h3>
+            <section>
+              <h3 class="title-3">Mobile first</h3>
               <p>
-                Diese Landing-Page für Angela's Dance Academy markiert den
-                Beginn meiner Webentwicklungsreise. Sie spiegelt meine
-                Fähigkeiten in HTML, CSS und JavaScript wider und präsentiert
-                eine facettenreiche Tanzakademie-Ladingpage.
+                Die Landing-Page wurde mit einem mobile-first Design gestaltet.
+                Das bedeutet, dass sie zuerst für mobile Geräte entwickelt wurde
+                und dann für Desktops und Tablets angepasst wurde. Dadurch wird
+                sichergestellt, dass die Seite auch auf kleinen Bildschirmen gut
+                aussieht und funktioniert.
               </p>
-            </div>
+            </section>
+            <section>
+              <h3 class="title-3">Designprozess</h3>
+              <p>
+                Ich begann mit einer umfassenden Beratung mit den Kunden. Wir
+                haben gemeinsam die technischen Tools und die Struktur der
+                Website festgelegt. Während der Entwicklung habe ich das Design
+                eng mit der Funktionalität abgestimmt.
+              </p>
+            </section>
+            <section>
+              <h3 class="title-3">Fazit</h3>
+              <p>
+                Die neue Website von "Angela's Dance Academy" ist ein
+                ansprechende und interaktive Webeseite, das die Nutzer zum
+                Entdecken einlädt.
+              </p>
+            </section>
           </div>
         </div>
       </div>
