--- a/project-page3.html
+++ b/project-page3.html
@@ -10,12 +10,30 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" href="./favico/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./favico/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favico/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favico/favicon-16x16.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868" />
+    <link
+      rel="mask-icon"
+      href="./favico/safari-pinned-tab.svg"
+      color="#686868"
+    />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#000000" />
 
@@ -48,11 +66,7 @@
       <div class="container">
         <div class="nav-row">
           <a href="./index.html">
-            <img
-              class="logo"
-              src="./img/icons/logo.svg"
-              alt="logo"
-            />
+            <img class="logo" src="./img/icons/logo.svg" alt="logo" />
           </a>
           <button class="dark-mode-btn">
             <img
@@ -73,7 +87,7 @@
             </li>
 
             <li class="nav-list__item">
-              <a href="./skills.html" class="nav-list__link">Über mich</a>
+              <a href="./about_me.html" class="nav-list__link">Über mich</a>
             </li>
 
             <li class="nav-list__item">
@@ -110,9 +124,6 @@
             </a>
           </div>
 
-          <div class="project-details__desc">
-            <h2>umgesetzt mit<br /><em>Figma</em></h2>
-          </div>
           <div class="project-details__info-banner">
             <h2 class="project-details__info-banner__headline">
               Interaktiver Click-Dummy
@@ -127,53 +138,27 @@
             </p>
           </div>
           <div class="project-details__main-text">
-            <h2>Besondere Merkmale</h2>
-
-            <h3>Hochwertiges Design</h3>
-            <p>
-              Das Design des Hörspiel-Players wurde mit größter Sorgfalt
-              gestaltet, um ein ästhetisch ansprechendes und intuitives
-              Benutzererlebnis zu bieten. Die Farbpalette, Schriftarten und
-              Grafikelemente wurden bewusst gewählt, um eine harmonische und
-              benutzerfreundliche Atmosphäre zu schaffen.
-            </p>
-
-            <h3>Lofi und Hifi Prototypen</h3>
-            <p>
-              Ich habe sowohl einen Lofi-Prototypen als auch einen
-              Hifi-Prototypen des Hörspiel-Players entwickelt. Der Lofi-Prototyp
-              gibt einen Überblick über die grundlegende Benutzerführung und
-              Interaktion, während der Hifi-Prototyp die Animationen und die
-              Benutzererfahrung detailliert darstellt.
-            </p>
-
-            <h3>Interaktive Animationen</h3>
-            <p>
-              Der Hörspiel-Player Click-Dummy verfügt über faszinierende
-              Animationen, die das visuelle Erlebnis lebendiger gestalten.
-              Beispielsweise werden beim Klicken auf Schaltflächen, wie
-              "Wiedergabe" oder "Stopp", flüssige Animationen aktiviert, um den
-              Eindruck eines realen Hörspiel-Players zu vermitteln.
-            </p>
-
-            <h3>Benutzerfreundliche Navigation</h3>
-            <p>
-              Die Benutzerführung im Click-Dummy ist intuitiv gestaltet, sodass
-              die Nutzer mühelos zwischen verschiedenen Hörspiel-Titeln
-              navigieren, die Lautstärke anpassen und die Wiedergabe steuern
-              können.
-            </p>
-
-            <h3>Realitätsnahe Interaktionen</h3>
-            <p>
-              Obwohl es sich um ein Designkonzept handelt, wurden die
-              Interaktionen so gestaltet, dass sie dem Verhalten eines echten
-              Hörspiel-Players nahekommen. Dies vermittelt den Nutzern ein
-              reales Gefühl und ermöglicht es ihnen, die Funktionalität des
-              Players zu erleben.
-            </p>
-
-            <div class="fazit">
+            <section>
+              <h3 class="title-3">Hochwertiges Design</h3>
+              <p>
+                Das Design des Hörspiel-Players wurde mit größter Sorgfalt
+                gestaltet, um ein ästhetisch ansprechendes und intuitives
+                Benutzererlebnis zu bieten. Die Farbpalette, Schriftarten und
+                Grafikelemente wurden bewusst gewählt, um eine harmonische und
+                benutzerfreundliche Atmosphäre zu schaffen.
+              </p>
+            </section>
+            <section>
+              <h3 class="title-3">Lofi und Hifi Prototypen</h3>
+              <p>
+                Ich habe sowohl einen Lofi-Prototypen als auch einen
+                Hifi-Prototypen des Hörspiel-Players entwickelt. Der
+                Lofi-Prototyp gibt einen Überblick über die grundlegende
+                Benutzerführung und Interaktion, während der Hifi-Prototyp die
+                Animationen und die Benutzererfahrung detailliert darstellt.
+              </p>
+            </section>
+            <section>
               <h3>Fazit</h3>
               <p>
                 Der interaktive Hörspiel-Player Click-Dummy dient nicht nur als
@@ -183,7 +168,7 @@
                 der Gestaltung ansprechender Benutzeroberflächen und betont die
                 Bedeutung von Interaktivität für ein positives Benutzererlebnis.
               </p>
-            </div>
+            </section>
           </div>
         </div>
       </div>
