--- a/contacts.html
+++ b/contacts.html
@@ -8,11 +8,30 @@
     <link rel="stylesheet" href="./css/main.min.css" />
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" href="./favico/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./favico/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favico/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favico/favicon-16x16.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868" />
+    <link
+      rel="mask-icon"
+      href="./favico/safari-pinned-tab.svg"
+      color="#686868"
+    />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#000000" />
 
@@ -59,7 +78,9 @@
             </li>
 
             <li class="nav-list__item">
-              <a href="./skills.html" class="nav-list__link">&uuml;ber mich</a>
+              <a href="./about_me.html" class="nav-list__link"
+                >&uuml;ber mich</a
+              >
             </li>
 
             <li class="nav-list__item">
