--- a/index.html
+++ b/index.html
@@ -6,18 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Professioneller Webentwickler aus Flensburg f&uuml;r ansprechende und leistungsstarke Webseiten. Expertise in HTML, CSS, JavaScript. Responsives Design, schnelle Ladezeiten, benutzerfreundliche Navigation."
+      content="Professioneller Webentwickler aus Flensburg f&uuml;r ansprechende und moderne Webseiten."
     />
     <title>Leonid Domahalskyy - Webentwickler - Webdesigner</title>
     <!-- Links -->
     <link rel="stylesheet" href="./css/main.min.css" />
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" href="./favico/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./favico/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favico/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favico/favicon-16x16.png"
+    />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#686868" />
+    <link
+      rel="mask-icon"
+      href="./favico/safari-pinned-tab.svg"
+      color="#686868"
+    />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#000000" />
     <!-- Google Tag (gtag.js) -->
@@ -59,7 +77,9 @@
               <a href="./index.html" class="nav-list__link--active">projekte</a>
             </li>
             <li class="nav-list__item">
-              <a href="./skills.html" class="nav-list__link">&uuml;ber mich</a>
+              <a href="./about_me.html" class="nav-list__link"
+                >&uuml;ber mich</a
+              >
             </li>
             <li class="nav-list__item">
               <a href="./contacts.html" class="nav-list__link">kontakt</a>
@@ -82,11 +102,11 @@
           Hey<br />
           ich bin Leonid
         </div>
-        <h1 class="header__wrapper-headline__skills">
+        <div class="header__wrapper-headline__skills">
           <span><em>UI/UX</em><br />designer</span><br />
           <span>frontend<br /><em>developer</em></span
           ><br />
-        </h1>
+        </div>
         <a href="/contacts.html" class="button button__main"
           >Kontaktiere mich</a
         >
@@ -98,9 +118,9 @@
     <!-- Main-->
     <main class="section">
       <div class="container">
-        <h2 class="title-1">projekte</h2>
+        <h1 class="title-1">projekte</h1>
         <ul class="projects">
-          <!-- Karte 1 -->
+          <!-- Card 1 -->
           <li class="project">
             <a href="./project-page1.html">
               <img
@@ -110,7 +130,7 @@
               />
             </a>
           </li>
-          <!-- Karte 2 -->
+          <!-- Card 2 -->
           <li class="project">
             <a href="./project-page2.html">
               <img
@@ -120,7 +140,7 @@
               />
             </a>
           </li>
-          <!-- Karte 3 -->
+          <!-- Card 3 -->
           <li class="project">
             <a href="./project-page3.html">
               <img
@@ -133,6 +153,7 @@
         </ul>
       </div>
     </main>
+
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
