--- a/about_me.html
+++ b/about_me.html
@@ -106,12 +106,12 @@
               <img src="./img/portrait.webp" alt="portrait" />
             </div>
             <div class="about-text">
-              <h2 class="title-2">Hey, eine kleine Vorstelung</h2>
+              <h2 class="title-3">Mein Weg als Softwareentwickler</h2>
               <p>
-                Moin! Ich bin ein begeisterter Programmierer aus dem malerischen
-                Flensburg im Norden Deutschlands. Mein Wissen in der
-                Softwareentwicklung habe ich durch kontinuierliches Engagement,
-                praktische Erfahrungen und mein Studium der
+                Moin! Ich bin ein passionierter Programmierer aus Flensburg im
+                Norden Deutschlands. Mein Wissen in der Softwareentwicklung habe
+                ich durch kontinuierliches Engagement, praktische Erfahrungen
+                und mein Studium der
                 <span>"Medieninformatik"</span> an der Hochschule Flensburg
                 erworben.
               </p>
@@ -147,7 +147,7 @@
             <li class="marquee-container__item">
               <!-- frontend marquee -->
               <section>
-                <h2 class="title-2 marquee-title">Frontend</h2>
+                <h2 class="title-3 marquee-title">Frontend</h2>
                 <div class="marquee">
                   <ul class="marquee__content">
                     <li aria-hidden="true">React</li>
@@ -173,7 +173,7 @@
             <li class="marquee-container__item">
               <!-- backend marquee -->
               <section>
-                <h2 class="title-2 marquee-title">Backend</h2>
+                <h2 class="title-3 marquee-title">Backend</h2>
                 <div class="marquee marquee--reverse">
                   <ul class="marquee__content">
                     <li aria-hidden="true">Deno</li>
@@ -288,22 +288,6 @@
                   </dd>
                 </div>
                 <div class="item">
-                  <dt>Deno</dt>
-                  <dd>
-                    <span class="level-description" aria-hidden="true"
-                      >Fortgeschritten</span
-                    >
-                    <div class="level">
-                      <div class="active"></div>
-                      <div class="active"></div>
-                      <div class="active"></div>
-                      <div class="inactive"></div>
-                      <div class="inactive"></div>
-                      <div class="inactive"></div>
-                    </div>
-                  </dd>
-                </div>
-                <div class="item">
                   <dt>Node. Js</dt>
                   <dd>
                     <span class="level-description" aria-hidden="true"
@@ -312,6 +296,22 @@
                     <div class="level">
                       <div class="active"></div>
                       <div class="active"></div>
+                      <div class="inactive"></div>
+                      <div class="inactive"></div>
+                      <div class="inactive"></div>
+                      <div class="inactive"></div>
+                    </div>
+                  </dd>
+                </div>
+                <div class="item">
+                  <dt>Deno</dt>
+                  <dd>
+                    <span class="level-description" aria-hidden="true"
+                      >Anfänger</span
+                    >
+                    <div class="level">
+                      <div class="active"></div>
+                      <div class="inactive"></div>
                       <div class="inactive"></div>
                       <div class="inactive"></div>
                       <div class="inactive"></div>
