--- a/project-page3.html
+++ b/project-page3.html
@@ -159,7 +159,7 @@
               </p>
             </section>
             <section>
-              <h3>Fazit</h3>
+              <h3 class="title-3">Fazit</h3>
               <p>
                 Der interaktive Hörspiel-Player Click-Dummy dient nicht nur als
                 visuelles Konzept, sondern verdeutlicht auch, wie Design und
