--- a/about_me.html
+++ b/about_me.html
@@ -106,7 +106,9 @@
               <img src="./img/portrait.webp" alt="portrait" />
             </div>
             <div class="about-text">
-              <h2 class="title-3">Mein Weg als Softwareentwickler</h2>
+              <h2 class="title-3">
+                Eine kleine persönliche Vorstellung meinerseits
+              </h2>
               <p>
                 Moin! Ich bin ein passionierter Programmierer aus Flensburg im
                 Norden Deutschlands. Mein Wissen in der Softwareentwicklung habe
@@ -132,9 +134,9 @@
                 ich gerne zur Verfügung.
               </p>
               <p>
-                Lass uns gemeinsam an spannenden Projekten arbeiten. Kontaktiere
-                mich, um mehr über meine Arbeit und wie ich dir helfen kann, zu
-                erfahren.
+                Lass uns gemeinsam an spannenden Projekten arbeiten und
+                großartige digitale Erlebnisse schaffen. Kontaktiere mich, um
+                mehr über meine Arbeit und wie ich dir helfen kann, zu erfahren.
               </p>
             </div>
           </div>
@@ -143,6 +145,7 @@
 
       <section>
         <div class="container">
+          <h2 class="title-2">Fähigkeiten</h2>
           <ul class="marquee-container">
             <li class="marquee-container__item">
               <!-- frontend marquee -->
@@ -202,7 +205,6 @@
 
       <!-- Capabilities -->
       <div class="container">
-        <h2 class="title-2">Fähigkeiten</h2>
         <section class="capabilities">
           <div class="grid-left">
             <section>
