--- a/about_me.html
+++ b/about_me.html
@@ -107,7 +107,7 @@
             </div>
             <div class="about-text">
               <h2 class="title-3">
-                Eine kleine persönliche Vorstellung meinerseits
+                Eine kleine Vorstellung meinerseits
               </h2>
               <p>
                 Moin! Ich bin ein passionierter Programmierer aus Flensburg im
