--- a/about_me.html
+++ b/about_me.html
@@ -85,6 +85,16 @@
             <li class="nav-list__item">
               <a href="./contacts.html" class="nav-list__link">Kontakt</a>
             </li>
+
+            <li class="nav-list__item">
+              <div class="dropdown nav-list__link">
+                Rechtliches
+                <div class="dropdown-content">
+                  <a href="./impressum.html">Impressum</a>
+                  <a href="./datenschutz.html">Datenschutz</a>
+                </div>
+              </div>
+            </li>
           </ul>
 
           <div class="hamburger">
@@ -106,9 +116,7 @@
               <img src="./img/portrait.webp" alt="portrait" />
             </div>
             <div class="about-text">
-              <h2 class="title-3">
-                Eine kleine persönliche Vorstellung meinerseits
-              </h2>
+              <h2 class="title-3">Eine kleine Vorstellung meinerseits</h2>
               <p>
                 Moin! Ich bin ein passionierter Programmierer aus Flensburg im
                 Norden Deutschlands. Mein Wissen in der Softwareentwicklung habe
