--- a/contacts.html
+++ b/contacts.html
@@ -88,6 +88,16 @@
                 >Kontakt</a
               >
             </li>
+
+            <li class="nav-list__item">
+              <div class="dropdown nav-list__link">
+                Rechtliches
+                <div class="dropdown-content">
+                  <a href="./impressum.html">Impressum</a>
+                  <a href="./datenschutz.html">Datenschutz</a>
+                </div>
+              </div>
+            </li>
           </ul>
 
           <div class="hamburger">
