--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </button>
           <ul class="nav-list">
             <li class="nav-list__item">
-              <a href="./index.html" class="nav-list__link--active">projekte</a>
+              <a href="./index.html" class="nav-list__link--active">Projekte</a>
             </li>
             <li class="nav-list__item">
               <a href="./about_me.html" class="nav-list__link"
@@ -82,7 +82,16 @@
               >
             </li>
             <li class="nav-list__item">
-              <a href="./contacts.html" class="nav-list__link">kontakt</a>
+              <a href="./contacts.html" class="nav-list__link">Kontakt</a>
+            </li>
+            <li class="nav-list__item">
+              <div class="dropdown nav-list__link">
+                Rechtliches
+                <div class="dropdown-content">
+                  <a href="./impressum.html">Impressum</a>
+                  <a href="./datenschutz.html">Datenschutz</a>
+                </div>
+              </div>
             </li>
           </ul>
           <div class="hamburger">
