--- a/project-page2.html
+++ b/project-page2.html
@@ -93,6 +93,16 @@
             <li class="nav-list__item">
               <a href="./contacts.html" class="nav-list__link">Kontakt</a>
             </li>
+
+            <li class="nav-list__item">
+              <div class="dropdown nav-list__link">
+                Rechtliches
+                <div class="dropdown-content">
+                  <a href="./impressum.html">Impressum</a>
+                  <a href="./datenschutz.html">Datenschutz</a>
+                </div>
+              </div>
+            </li>
           </ul>
 
           <div class="hamburger">
